Bugfix/issue 296/organization cards inconsistent UI (#348)
* organization list inconsistent ui

* truncate organization names longer than 2 lines

* change organization type to an icon to save space

* improve responsiveness

* refactor

--- a/src/static/css/tooltips.css
+++ b/src/static/css/tooltips.css
@@ -1,12 +1,13 @@
 .tooltip {
     position: relative;
     display: inline-block;
+    justify-content: center;
 }
 
 .tooltip .tooltiptext {
     visibility: hidden;
     width: 150px;
-    top: 85%;
+    top: 90%;
     left: 55%;
     margin-left: -73px;
     background-color: #464655;
@@ -23,7 +24,28 @@
     z-index: 1;
 }
 
-.tooltip .tooltiptext::after {
+.tooltip .tooltiptext-list {
+    visibility: hidden;
+    width: 100px;
+    top: 100%;
+    left: 50%;
+    margin-left: -50px;
+    background-color: #464655;
+    color: #fff;
+    text-align: center;
+    padding: 5px 2px;
+    font-size: 0.75rem;
+    border-radius: 5px;
+    position: absolute;
+    opacity: 0;
+    transition: opacity .6s ease-in-out;
+    -webkit-transition: opacity .6s ease-in-out;
+    -moz-transition: opacity .6s ease-in-out;
+    z-index: 1;
+}
+
+.tooltip .tooltiptext::after,
+.tooltip .tooltiptext-list::after {
     content: " ";
     position: absolute;
     bottom: 100%;
@@ -34,7 +56,8 @@
     border-color: transparent transparent #464655 transparent;
   }
 
-.tooltip:hover .tooltiptext {
+.tooltip:hover .tooltiptext,
+.tooltip:hover .tooltiptext-list {
     visibility: visible;
     opacity: 1;
 }
